style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@500&display=swap');

@media screen and (max-width: 600px) {
    #right-side {
        visibility: hidden;
    }

}

html {
    scroll-behavior: smooth;
}

body {
    background-color: #f6f6f6;
}

h1 {
    color: #191919;
    font-family: 'Nunito', sans-serif;
    font-size: 44px;
}

h3 {
    color: #191919;
    font-family: 'Roboto Mono', sans-serif;
    font-size: 28px;
    font-weight: bolder;
    color: #0831FF;
}

.tab-panels p {
    margin-top: 4px;
    color: #191919;
    font-family: 'Nunito', sans-serif;
    font-size: 14px;
}
p,
li {
    color: #191919;
    font-family: 'Nunito', sans-serif;
    font-size: 18px;
}

ul {
    margin-right: 54%;
}

a img.hover {
    display: none;
}

a img.default {
    display: inherit;
}

a:hover img.hover {
    display: inherit;
}

a:hover img.default {
    display: none;
}

#menu-icons {
    margin-top: 50%;
}

#menu-icons a {
    text-decoration: none;
}

.default,
.hover {
    height: 24px;
    width: 24px;
    margin-right: 5%;
    /* margin-bottom: 25%; */
    /* display: inline-block; */
}


#home,
#about,
#projects {
    margin-bottom: 5%;
}

#left-side {
    margin-left: 10%;
    margin-top: 15%;
    margin-right: 27%;
    margin-bottom: 5%;
}

#right-side {
    margin-left: 88%;
    position: fixed;
    top: 75%;
}

#menu {
    display: grid;
    grid-template-columns: 1fr;
}

#name {
    color: #0831FF;
}

#position {
    /* filter: drop-shadow(2px 2px 6px #0831FF); */
    font-family: 'Fira Code', monospace;
    color: #0831FF;
    font-weight: 278;
    font-size: 30px;
}

#summary {
    font-size: 24px;
}

span {
    border-right: .05em solid;
    animation: caret 1s steps(1) infinite;
}

@keyframes caret {
    50% {
        border-color: transparent;
    }
}

#about a,
#projects a,
#home a {
    background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 50%, #BDFF60 50%);
    background-position: -0% 0;
    background-size: 200% auto;
    color: #191919;
    /* font-size: 1.75em;
    line-height: 1.15em; */
    transition: background-position 0.5s ease-out;
    font-family: 'Roboto Mono', monospace;
}

#about a:hover,
#projects a:hover,
#home a:hover {
    background-position: -99.99% 0;
    color: #0831FF;
}



#contact {
    padding: 1%;
    background-color: #FAFDFA;
    font-family: 'Roboto Mono', monospace;
    color: #191919;
    border: 0.1em solid;
    font-size: 17px;
}

#contact a {
    text-decoration: none;
    color: #191919;
    text-shadow: 1px 1px 1px #bdff58;
}

#contact:hover{
    text-decoration: underline;
    /* background-color: #BDFF60;
    transition: 0.3s background; */
}

#about-me {
    margin-top: 5%;
    margin-bottom: 10%;
}

#home-part {
    margin-bottom: 30%;
}


/**
 * Disable smooth scrolling when users have prefers-reduced-motion enabled
 */
@media screen and (prefers-reduced-motion: reduce) {
    html {
        scroll-behavior: auto;
    }
}

#wave {
    border-radius: 50%;
    height: 200px;
    width: 200px;
}

#arabic {
    font-family: 'Noto Sans Arabic', sans-serif;
    font-size: 20px;
}

li::marker {
    color: #0831FF;
}

#active_home {
    display: none;
}

/*
 CSS for the main interaction
*/
.tabset>input[type="radio"] {
    position: absolute;
    left: -200vw;
}

.tabset .tab-panel {
    display: none;
}

.tabset>input:first-child:checked~.tab-panels>.tab-panel:first-child,
.tabset>input:nth-child(3):checked~.tab-panels>.tab-panel:nth-child(2),
.tabset>input:nth-child(5):checked~.tab-panels>.tab-panel:nth-child(3),
.tabset>input:nth-child(7):checked~.tab-panels>.tab-panel:nth-child(4),
.tabset>input:nth-child(9):checked~.tab-panels>.tab-panel:nth-child(5),
.tabset>input:nth-child(11):checked~.tab-panels>.tab-panel:nth-child(6),
.tabset>input:nth-child(13):checked~.tab-panels>.tab-panel:nth-child(7) {
    display: block;
}


.tabset>label {
    position: relative;
    display: inline-block;
    padding: 15px 15px 25px;
    border: 1px solid transparent;
    border-bottom: 0;
    cursor: pointer;
    font-weight: 600;
    font-family: 'Roboto Mono', sans-serif;
    font-size: 16px;
}

.tabset>label::after {
    content: "";
    position: absolute;
    left: 15px;
    bottom: 10px;
    width: 22px;
    height: 4px;
    background: #8d8d8d;
}

.tabset>label:hover,
.tabset>input:focus+label {
    color: #0831FF;
}

.tabset>label:hover::after,
.tabset>input:focus+label::after,
.tabset>input:checked+label::after {
    background: #0831FF;
}

.tabset>input:checked+label {
    border-color: #ccc;
    border-bottom: 1px solid #f6f6f6;
    margin-bottom: -1px;
}

.tab-panel {
    padding: 30px 0;
    border-top: 1px solid #ccc;
}

/*
   Demo purposes only
  */
*,
*:before,
*:after {
    box-sizing: border-box;
}

body {
    padding: 30px;
}

.tabset {
    max-width: 65em;
}
/* end */

#menu p{
    font-size: 16px;
}

.tab-panels label {
    font-family: 'Roboto Mono', monospace;
    font-size: 10px;
    color:#828282;
}

.tab-panels a {
    font-size: 14px;
}
.card {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

#long{
    width: 25%;
    height: 15%;
}

.project-pic{
    filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
    margin-top: 5px;
    margin-bottom: 5%;
    border-width: thin;
    width: 60%;  
    height: auto; 
    border-radius: 5px;
}

